Create endpoint /api/routes POST and PUT
